--- a/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
+++ b/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
@@ -43,9 +43,11 @@
   <main id="main">
 
     <section id="portfolio-details" class="portfolio-details">
-    <div class="container">
+    <div class="contentwrap">
 		
-
+<div class="row gy-4">
+	
+<div class="col-lg-11">
 
 
           <!-- *****************CONCEPT1 SETA********************************-->
@@ -55,7 +57,7 @@
         </div--><!--headertitle-->  
 		
         
-        <div class="banner_wrap">	
+        <div class="banner_wrap">		
     
             <div class="banner970x250">
                 <iframe src="concept1/970x250_WhatisHRO.html" id="iframeid1"></iframe>
@@ -64,39 +66,40 @@
             </div>
         </div><!--banner_wrap-->
 	
-
-            <div class="col-lg-4">	
+        <div class="banner_wrap">	
+            <div class="thirtysix_wrap">
 
                 <div class="banner300x600">
                     <iframe src="concept1/300x600_WhatisHRO.html" id="iframeid2"></iframe>
                 </div><!--banner iframe-->
             </div><!--third_wrap-->		
 
-            <div class="col-lg-3">	
+            <div class="twenty_wrap">
 
                 <div class="banner160x600">
                     <iframe src="concept1/160x600_WhatisHRO.html" id="iframeid3"></iframe>
                 </div>
             </div><!--eighteen_wrap-->
 
-            <div class="col-lg-3">	
+            <div class="twenty_wrap">
 
                 <div class="banner300x250">
                     <iframe src="concept1/300x250_WhatisHRO.html" id="iframeid4"></iframe>
                 </div>
             </div><!--twenty_wrap-->
-
+		</div><!--banner_wrap-->
 	
-        <div class="banner_wrap">
+        <div class="banner_wrap">	
                 <div class="banner728x90">
                     <iframe src="concept1/728x90_WhatisHRO.html" id="iframeid5"></iframe>
                 </div><!--728x90-->
 		</div><!--banner_wrap-->
 
 
+</div>
 	     <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>ADP HRO Outsourcing (HTML Animations)</h3>
+              <h3>ADP HRO Outsourcing - ADP HRO Outsourcing (HTML Animations)</h3>
               <ul>
                 <li><strong>Role</strong>: Animation, Graphic Design, Art Direction</li>
 	 <!--			<li>         
@@ -106,7 +109,7 @@
 	</li>-->
               </ul>
             </div>
- 
+          </div>
 			
 		</div>
 		</div>
