--- a/assets/html-animations/adp-mas-january-animations/adp-mas-january-animations-details.html
+++ b/assets/html-animations/adp-mas-january-animations/adp-mas-january-animations-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - ADP HRO Outsourcing Animations</title>
+  <title>Portfolio Details - ADP MAS Janurary Ads Animations</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,9 +43,11 @@
   <main id="main">
 
     <section id="portfolio-details" class="portfolio-details">
-    <div class="container">
+    <div class="contentwrap">
 		
 <div class="row gy-4">
+	
+<div class="col-lg-11">
 
 
           <!-- *****************CONCEPT1 SETA********************************-->
@@ -55,50 +57,51 @@
         </div--><!--headertitle-->  
 		
         
-        <div class="col-lg-11">		
+        <div class="banner_wrap">		
     
             <div class="banner970x250">
-                <iframe src="concept1/970x250_WhatisHRO.html" id="iframeid1"></iframe>
+                <iframe src="concept1/970x250_MAS_Jan_Insight_1.html" id="iframeid1"></iframe>
                 <br><br>
 
             </div>
         </div><!--banner_wrap-->
 	
-
-            <div class="col-lg-4">	
+        <div class="banner_wrap">	
+            <div class="thirtysix_wrap">
 
                 <div class="banner300x600">
-                    <iframe src="concept1/300x600_WhatisHRO.html" id="iframeid2"></iframe>
+                    <iframe src="concept1/300x600_MAS_Jan_Insight_1.html" id="iframeid2"></iframe>
                 </div><!--banner iframe-->
             </div><!--third_wrap-->		
 
-            <div class="col-lg-2">	
+            <div class="twenty_wrap">
 
                 <div class="banner160x600">
-                    <iframe src="concept1/160x600_WhatisHRO.html" id="iframeid3"></iframe>
+                    <iframe src="concept1/160x600_MAS_Jan_Insight_1.html" id="iframeid3"></iframe>
                 </div>
             </div><!--eighteen_wrap-->
 
-            <div class="col-lg-4">	
+            <div class="twenty_wrap">
 
                 <div class="banner300x250">
-                    <iframe src="concept1/300x250_WhatisHRO.html" id="iframeid4"></iframe>
+                    <iframe src="concept1/300x250_MAS_Jan_Insight_1.html" id="iframeid4"></iframe>
                 </div>
             </div><!--twenty_wrap-->
-
+		</div><!--banner_wrap-->
 	
-        <div class="col-lg-11">	
+        <div class="banner_wrap">	
                 <div class="banner728x90">
-                    <iframe src="concept1/728x90_WhatisHRO.html" id="iframeid5"></iframe>
+                    <iframe src="concept1/728x90_MAS_Jan_Insight_1.html" id="iframeid5"></iframe>
                 </div><!--728x90-->
 		</div><!--banner_wrap-->
 
 
+	</div>
 	     <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>ADP HRO Outsourcing (HTML Animations)</h3>
+              <h3>ADP MAS January Ads (HTML Animations)</h3>
               <ul>
-                <li><strong>Role</strong>: Animation, Graphic Design, Art Direction</li>
+                <li><strong>Role</strong>: HTML Animation, Graphic Design, Art Direction</li>
 	 <!--			<li>         
 					<p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
@@ -108,7 +111,7 @@
             </div>
           </div>
 			
-</div>
+		</div>
 		</div>
 
     </section><!-- End Portfolio Details Section -->
