--- a/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
+++ b/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
@@ -60,38 +60,37 @@
     
             <div class="banner970x250">
                 <iframe src="concept1/970x250_WhatisHRO.html" id="iframeid1"></iframe>
-                <br><br>
 
-            </div>
+            </div><!--970x250-->
         </div><!--banner_wrap-->
 	
             <div class="col-lg-4">
 
                 <div class="banner300x600">
                     <iframe src="concept1/300x600_WhatisHRO.html" id="iframeid2"></iframe>
-                </div><!--banner iframe-->
-            </div><!--third_wrap-->		
+                </div><!--300x600-->
+            </div>	
 
             <div class="col-lg-3">
 
                 <div class="banner160x600">
                     <iframe src="concept1/160x600_WhatisHRO.html" id="iframeid3"></iframe>
-                </div>
-            </div><!--eighteen_wrap-->
+                </div><!--160x600-->
+            </div>
 
             <div class="col-lg-4">
 
                 <div class="banner300x250">
                     <iframe src="concept1/300x250_WhatisHRO.html" id="iframeid4"></iframe>
-                </div>
-            </div><!--twenty_wrap-->
+                </div><!--300x250-->
+            </div>
 
 	
-        <div class="bcol-lg-11">	
+        <div class="col-lg-8">	
                 <div class="banner728x90">
                     <iframe src="concept1/728x90_WhatisHRO.html" id="iframeid5"></iframe>
                 </div><!--728x90-->
-		</div><!--banner_wrap-->
+		</div>
 
 
 	     <div class="col-lg-11">
