--- a/assets/html-animations/adp-mas-january-animations/adp-mas-january-animations-details.html
+++ b/assets/html-animations/adp-mas-january-animations/adp-mas-january-animations-details.html
@@ -47,7 +47,6 @@
 		
 <div class="row gy-4">
 	
-<div class="col-lg-11">
 
 
           <!-- *****************CONCEPT1 SETA********************************-->
@@ -57,46 +56,44 @@
         </div--><!--headertitle-->  
 		
         
-        <div class="banner_wrap">		
+        <div class="col-lg-11">		
     
             <div class="banner970x250">
                 <iframe src="concept1/970x250_MAS_Jan_Insight_1.html" id="iframeid1"></iframe>
-                <br><br>
 
-            </div>
-        </div><!--banner_wrap-->
+            </div><!--970x250-->
+        </div>
 	
-        <div class="banner_wrap">	
-            <div class="thirtysix_wrap">
+
+            <div class="col-lg-4">
 
                 <div class="banner300x600">
                     <iframe src="concept1/300x600_MAS_Jan_Insight_1.html" id="iframeid2"></iframe>
-                </div><!--banner iframe-->
-            </div><!--third_wrap-->		
+                </div><!--300x600-->
+            </div>	
 
-            <div class="twenty_wrap">
+            <div class="col-lg-3">
 
                 <div class="banner160x600">
                     <iframe src="concept1/160x600_MAS_Jan_Insight_1.html" id="iframeid3"></iframe>
-                </div>
-            </div><!--eighteen_wrap-->
+                </div><!--160x600-->
+            </div>
 
-            <div class="twenty_wrap">
+            <div class="col-lg-4">
 
                 <div class="banner300x250">
                     <iframe src="concept1/300x250_MAS_Jan_Insight_1.html" id="iframeid4"></iframe>
-                </div>
-            </div><!--twenty_wrap-->
-		</div><!--banner_wrap-->
+                </div><!--300x250-->
+            </div>
+
 	
-        <div class="banner_wrap">	
+        <div class="col-lg-8">	
                 <div class="banner728x90">
                     <iframe src="concept1/728x90_MAS_Jan_Insight_1.html" id="iframeid5"></iframe>
                 </div><!--728x90-->
-		</div><!--banner_wrap-->
+		</div>
 
 
-	</div>
 	     <div class="col-lg-11">
             <div class="portfolio-info">
               <h3>ADP MAS January Ads (HTML Animations)</h3>
