--- a/index.html
+++ b/index.html
@@ -234,6 +234,19 @@
             </div>
           </div>
 			
+		 <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
+            <div class="portfolio-wrap">
+              <img src="assets/img/preview/adp-what-is-hro.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ADP What Is HRO?</h4>
+                <p>HTML Animations</p>
+				<div class="portfolio-links">
+                  <a href="assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+			
 		  <div class="col-lg-4 col-md-6 portfolio-item filter-digital">
             <div class="portfolio-wrap">
               <img src="assets/img/preview/h2o-direct-email-preview.jpg" class="img-fluid" alt="">
@@ -247,14 +260,14 @@
             </div>
           </div>
 			
-		  <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
+		 <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
             <div class="portfolio-wrap">
               <img src="assets/img/preview/adp-jan-mas-insight1-preview.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ADP MAS Insight</h4>
-                <p>Animation</p>
-                <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <p>HTML Animations</p>
+				<div class="portfolio-links">
+                  <a href="assets/html-animations/adp-mas-january-animations/adp-mas-january-animations-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -437,6 +450,19 @@
                 <p>Digital</p>
                 <div class="portfolio-links">
                   <a href="web-banners-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Websites &amp; Banners Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+			
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
+            <div class="portfolio-wrap">
+              <img src="assets/img/preview/adp-mas-solve-hr.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ADP MAS Solve HR Problems</h4>
+                <p>HTML Animations</p>
+				<div class="portfolio-links">
+                  <a href="assets/html-animations/adp-mas-solve-hr-animations/adp-mas-solve-hr-animations-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
