--- a/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
+++ b/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - ADP HRO Outsourcing Animations</title>
+  <title>Portfolio Details - ADP HR Outsourcing Animations</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -95,7 +95,7 @@
 
 	     <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>ADP HRO Outsourcing - ADP HRO Outsourcing (HTML Animations)</h3>
+              <h3>ADP HR Outsourcing (HTML Animations)</h3>
               <ul>
                 <li><strong>Role</strong>: Animation, Graphic Design, Art Direction</li>
 	 <!--			<li>         
